enumcapsulate/tests/expand-macros/try_into/fail/enum/tuple_variants/many_fields.err.txt
error: proc-macro derive panicked
 --> /tests/expand-macros/try_into/fail/enum/tuple_variants/many_fields.rs:5:10
  |
5 | #[derive(From)]
  |          ^^^^
  |
  = help: message: called `Result::unwrap()` on an `Err` value: Error("Only enums with single-element tuple variants can use this derive")
error: could not compile `<CRATE>` (bin "<BIN>") due to previous error
